--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "multer": "^1.4.5-lts.1",
     "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=14.20.1"
   }
 }
